--- a/index.html
+++ b/index.html
@@ -16,40 +16,44 @@
 
 <body>
     <header class="page-header">
-        <div class="container page-header--container">
-            <a class="logo" href="index.html">Web<span class="logo--accent-header">Studio</span></a>
+        <div class="container">
+            <a class="logo logo--page-header" href="index.html">Web<span class="logo--accent-header">Studio</span></a>
             <nav class="navigation">
-                <ul class="list">
-                    <li class="list__item"><a class="list__link list__link--active" href="index.html">Agencja</a></li>
-                    <li class="list__item"><a class="list__link" href="portfolio.html">Portfolio</a></li>
-                    <li class="list__item"><a class="list__link" href="/contact">Kontakt</a></li>
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a class="navigation__link navigation__link--active" href="index.html">Agencja</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="portfolio.html">Portfolio</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="/contact">Kontakt</a></li>
                 </ul>
             </nav>
-            <div class="header-contacts">
-                <a href="mailto:info@devstudio.com" class="contact-link">
-                    <svg class="contact-link__icon" width="16" height="12">
-                        <use href="images/icon.svg#icon-envelope"></use>
-                    </svg> info@devstudio.com</a>
-            </div>
-            <div class="header-contacts">
-                <a href="tel:+48111111111" class="contact-link">
-                    <svg class="contact-link__icon" width="10" height="16">
-                        <use href="images/icon.svg#icon-smartphone"></use>
-                    </svg> +48 111 111 111</a>
-            </div>
+            <ul class="contact">
+                <li class="contact__item">
+                    <a href="mailto:info@devstudio.com" class="contact__link">
+                        <svg class="contact__icon" width="16" height="12">
+                            <use href="images/icon.svg#icon-envelope"></use>
+                        </svg> info@devstudio.com
+                    </a>
+                </li>
+                <li class="contact__item">
+                    <a href="tel:+48111111111" class="contact__link">
+                        <svg class="contact__icon" width="10" height="16">
+                            <use href="images/icon.svg#icon-smartphone"></use>
+                        </svg> +48 111 111 111
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
         <section class="title-section">
-            <div class="container title-section__container">
+            <div class="container">
                 <h1 class="title-section__title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
                 <button class="title-section__title-button" type="button" data-modal-open>Zamów usługe</button>
             </div>
         </section>
         <section class="advantages"> 
             <div class="container">
-                <!--Nasze advantages-->
-                    <ul class="advantages-list">
+                <!--Our advantages-->
+                    <ul class="advantages__list">
                         <li class="advantages__item">
                             <div class="advantages__img">
                                 <svg class="advantages__icon">
@@ -92,22 +96,22 @@
         <section class="images">
             <div class="container">
             <h2>Czym się zajmujemy</h2>
-            <ul class="images-list">
-                <li class="images-list__item">
+            <ul class="images__list">
+                <li class="images__item">
                 <img src="images/close-up-image-programer-working-his-desk-office.jpg"
                 alt="programer working his desk office"
                 width="370"
                 height="294">
                 <p class="images__label">Aplikacje komputerowe</p>
                 </li>
-                <li class="images-list__item">
+                <li class="images__item">
                 <img src="images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones.jpg" 
                 alt="smartphones team creators is working interface mobile phones"
                 width="370"
                 height="294">
                 <p class="images__label">Aplikacje mobilne</p>
                 </li>
-                <li class="images-list__item">
+                <li class="images__item">
                 <img src="images/creative-artist-web-design-with-working-colour-selection-graphic-tablet.jpg"
                 alt="creative artist web design with working colour selection graphic tablet" 
                 width="370"
@@ -119,16 +123,16 @@
         </section>
         <section class="team">
             <div class="container">
-            <h2 class="team_tittle">Nasz zespół</h2>
-                <ul class="team-list">
+            <h2>Nasz zespół</h2>
+                <ul class="team__list">
                     <li class="team-list__item">
                         <figure class="team__card">
                         <img src="images/4853.jpg" alt="Product Designer"
                         width="270"
                         height="260">
                         <figcaption>
-                            <h4 class="team__caption">John Doe</h4>
-                            <p class="team-caption team-caption--accent">Product Designer</p>
+                            <h4 class="team__name">John Doe</h4>
+                            <p class="team__caption team__caption--accent">Product Designer</p>
                             <ul class="social-list">
                                 <li class="social-list__item">
                                     <a class="social-list__link" href="https://www.instagram.com">
@@ -169,8 +173,8 @@
                         width="270"
                         height="260">
                         <figcaption>
-                            <h4 class="team__caption">John Doe</h4>
-                            <p class="team-caption team-caption--accent">Frontend Developer</p>
+                            <h4 class="team__name">John Doe</h4>
+                            <p class="team__caption team__caption--accent">Frontend Developer</p>
                                 <ul class="social-list">
                                 <li class="social-list__item ">
                                     <a class="social-list__link" href="https://www.instagram.com">
@@ -211,8 +215,8 @@
                         width="270"
                         height="260">
                         <figcaption>
-                            <h4 class="team__caption">John Doe</h4>
-                            <p class="team-caption team-caption--accent">Marketing</p>
+                            <h4 class="team__name">John Doe</h4>
+                            <p class="team__caption team__caption--accent">Marketing</p>
                             <ul class="social-list">
                                 <li class="social-list__item ">
                                     <a class="social-list__link" href="https://www.instagram.com">
@@ -253,8 +257,8 @@
                         width="270"
                         height="260">
                         <figcaption>
-                            <h4 class="team__caption">John Doe</h4>
-                            <p class="team-caption team-caption--accent">UI Designer</p>
+                            <h4 class="team__name">John Doe</h4>
+                            <p class="team__caption team__caption--accent">UI Designer</p>
                             <ul class="social-list">
                                 <li class="social-list__item ">
                                     <a class="social-list__link" href="https://www.instagram.com">
@@ -294,45 +298,45 @@
         <section class="clients">
             <div class="container">
                 <h2>Nasi klienci</h2>
-                <ul class="list-client-items">
-                    <li class="client-item">
-                        <a class="client-item-list">
-                            <svg class="client-item-list-icon icon-logo1">
+                <ul class="clients__list">
+                    <li>
+                        <a class="clients__item">
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-list">
-                            <svg class="client-item-list-icon icon-logo2">
+                    <li>
+                        <a class="clients__item">
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-list">
-                            <svg class="client-item-list-icon icon-logo3">
+                    <li>
+                        <a class="clients__item">
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-list">
-                            <svg class="client-item-list-icon icon-logo4">
+                    <li>
+                        <a class="clients__item">
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-list">
-                            <svg class="client-item-list-icon icon-logo5">
+                    <li>
+                        <a class="clients__item">
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="client-item">
-                        <a class="client-item-list" >
-                            <svg class="client-item-list-icon icon-logo6">
+                    <li>
+                        <a class="clients__item" >
+                            <svg class="clients__icon">
                                 <use href="images/icon.svg#icon-logo6"></use>
                             </svg>
                         </a>
@@ -344,10 +348,10 @@
     <footer class="page-footer">
         <div class="container">
             <div class="footer-flex">
-                <div class="footer-aside footer-aside--container">
-                    <a class="footer-logo" href="/"><span class="footer-logo footer-logo--accent">Web</span><span
-                            class="footer-logo footer-logo--accent-light">Studio</span></a>
-                    <div class="footer-adress footer-adress--container">
+                <div class="footer-aside">
+                    <a class="logo" href="/"><span class="logo logo--accent-footer">Web</span><span
+                            class="logo logo--accent-footer-light">Studio</span></a>
+                    <div class="footer-adress">
                         <address class="footer-adress__item">m. Warszawa, Aleje Jerozolimskie 21</address>
                         <address class="footer-adress__item">
                             <a class="footer-adress__link" href="mailto:info@example.com"> info@example.com</a>
@@ -359,31 +363,31 @@
                 </div>
                 <section class="footer-social-links">
                         <h4 class="footer-social-links__tittle"> DOŁĄCZ DO NAS</h4>
-                            <ul class="footer-social-list">
-                                <li class="footer-social-list__item">
-                                    <a class="footer-social__link" href="https://www.instagram.com">
-                                        <svg class="footer-social__icon" width="44" height="44">
+                            <ul class="social-list social-list--footer">
+                                <li class="social-list__item--footer">
+                                    <a class=" social-list__link social-list__link--footer" href="https://www.instagram.com">
+                                        <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                             <use href="images/icon.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="footer-social-list__item">
-                                    <a class="footer-social__link" href="https://twitter.com">
-                                    <svg class="footer-social__icon" width="44" height="44">
+                                <li class="social-list__item--footer">
+                                    <a class=" social-list__link social-list__link--footer" href="https://twitter.com">
+                                    <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                         <use href="images/icon.svg#icon-twitter"></use>
                                     </svg>
                                     </a>
                                 </li>
-                                <li class="footer-social-list__item">
-                                    <a class="footer-social__link" href="https://facebook.com">
-                                        <svg class="footer-social__icon" width="44" height="44">
+                                <li class="social-list__item--footer">
+                                    <a class=" social-list__link social-list__link--footer" href="https://facebook.com">
+                                        <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                             <use href="images/icon.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="footer-social-list__item">
-                                    <a class="footer-social__link" href="https://pl.linkedin.com/">
-                                        <svg class="footer-social__icon" width="44" height="44">
+                                <li class="social-list__item--footer">
+                                    <a class=" social-list__link social-list__link--footer" href="https://pl.linkedin.com/">
+                                        <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                             <use href="images/icon.svg#icon-in"></use>
                                         </svg>
                                     </a>
@@ -432,7 +436,7 @@
                     </label>
                 <label class="modal-inputs__label">
                     Komentarz
-                    <textarea class="modal-inputs__textarea"name="feedback" placeholder="Wprowadź tekst"></textarea>
+                    <textarea class="modal-inputs__textarea modal-inputs__textarea--position"name="feedback" placeholder="Wprowadź tekst"></textarea>
                 </label>
             <div>    
                 <label class="checkbox">
@@ -441,7 +445,7 @@
                 </label>
             </div>
             <div>
-                <button type="submit" class="submit-button">Wyślij</button>
+                <button type="submit" class="modal-button">Wyślij</button>
             </div>
             </form>
     </div>
