--- a/portfolio.html
+++ b/portfolio.html
@@ -17,29 +17,33 @@
         <div class="container page-header--container">
             <a class="logo" href="index.html">Web<span class="logo--accent-header">Studio</span></a>
             <nav class="navigation">
-                <ul class="list">
-                    <li class="list__item"><a class="list__link" href="index.html">Agencja</a></li>
-                    <li class="list__item"><a class="list__link  list__link--active" href="portfolio.html">Portfolio</a></li>
-                    <li class="list__item"><a class="list__link" href="/contact">Kontakt</a></li>
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a class="navigation__link" href="index.html">Agencja</a></li>
+                    <li class="navigation__item"><a class="navigation__link navigation__link--active" href="portfolio.html">Portfolio</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="/contact">Kontakt</a></li>
                 </ul>
             </nav>
-            <div class="header-contacts">
-                <a href="mailto:info@devstudio.com" class="contact-link">
-                    <svg class="contact-link__icon" width="16" height="12">
-                        <use href="images/icon.svg#icon-envelope"></use>
-                    </svg> info@devstudio.com</a>
-            </div>
-            <div class="header-contacts">
-                <a href="tel:+48111111111" class="contact-link">
-                    <svg class="contact-link__icon" width="10" height="16">
-                        <use href="images/icon.svg#icon-smartphone"></use>
-                    </svg> +48 111 111 111</a>
-            </div>
+            <ul class="contact">
+                <li class="contact__item">
+                    <a href="mailto:info@devstudio.com" class="contact__link">
+                        <svg class="contact__icon" width="16" height="12">
+                            <use href="images/icon.svg#icon-envelope"></use>
+                        </svg> info@devstudio.com
+                    </a>
+                </li>
+                <li class="contact__item">
+                    <a href="tel:+48111111111" class="contact__link">
+                        <svg class="contact__icon" width="10" height="16">
+                            <use href="images/icon.svg#icon-smartphone"></use>
+                        </svg> +48 111 111 111
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
         <section class="portfolio-buttons">
-            <div class="container portfolio-buttons--container">
+            <div class="container">
                 <ul class="portfolio-buttons-list">
                     <li class="portfolio-buttons__item"><button class="portfolio-buttons__button" type="button">Wszystkie</button></li>
                     <li class="portfolio-buttons__item"><button class="portfolio-buttons__button" type="button">Strony</button></li>
@@ -49,7 +53,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section class="portfolio">
             <div class="container">
             <ul class="portfolio-list">
                 <li class="portfolio__item">    
@@ -185,8 +189,8 @@
         <div class="container">
             <div class="footer-flex">
                 <div class="footer-aside footer-aside--container">
-                    <a class="footer-logo" href="/"><span class="footer-logo footer-logo--accent">Web</span><span
-                            class="footer-logo footer-logo--accent-light">Studio</span></a>
+                    <a class="logo" href="/"><span class="logo logo--accent-footer">Web</span><span
+                            class="logo logo--accent-footer-light">Studio</span></a>
                     <div class="footer-adress footer-adress--container">
                         <address class="footer-adress__item">m. Warszawa, Aleje Jerozolimskie 21</address>
                         <address class="footer-adress__item">
@@ -199,31 +203,31 @@
                 </div>
                 <section class="footer-social-links">
                     <h4 class="footer-social-links__tittle"> DOŁĄCZ DO NAS</h4>
-                    <ul class="footer-social-list">
-                        <li class="footer-social-list__item">
-                            <a class="footer-social__link" href="https://www.instagram.com">
-                                <svg class="footer-social__icon" width="44" height="44">
+                    <ul class="social-list social-list--footer">
+                        <li class="social-list__item--footer">
+                            <a class=" social-list__link social-list__link--footer" href="https://www.instagram.com">
+                                <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                     <use href="images/icon.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-list__item">
-                            <a class="footer-social__link" href="https://twitter.com">
-                                <svg class="footer-social__icon" width="44" height="44">
+                        <li class="social-list__item--footer">
+                            <a class=" social-list__link social-list__link--footer" href="https://twitter.com">
+                                <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                     <use href="images/icon.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-list__item">
-                            <a class="footer-social__link" href="https://facebook.com">
-                                <svg class="footer-social__icon" width="44" height="44">
+                        <li class="social-list__item--footer">
+                            <a class=" social-list__link social-list__link--footer" href="https://facebook.com">
+                                <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                     <use href="images/icon.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="footer-social-list__item">
-                            <a class="footer-social__link" href="https://pl.linkedin.com/">
-                                <svg class="footer-social__icon" width="44" height="44">
+                        <li class="social-list__item--footer">
+                            <a class=" social-list__link social-list__link--footer" href="https://pl.linkedin.com/">
+                                <svg class="social-list__icon social-list__icon--footer" width="44" height="44">
                                     <use href="images/icon.svg#icon-in"></use>
                                 </svg>
                             </a>
